# lxsp

./: .gitignore  .replit  Cargo.toml  junk  junk2  lisp  replit.nix  run  todo  types
junk/: fib.lisp  junk  junk1
lisb/: base.lisp  c2.lisp  fib.lisp  incl.l  lam.l  let.lisp  macroTest.l  std.l  std.l.comment  std.lisp  test.lisp  truthy.lisp
src/: cli.rs  core.lua  dbg.lua  env.rs  eval.rs  gmt.lua  lisp.rs  mac.rs  main.rs  parse.rs  scan.rs  tests.rs  value.rs  z100.rs
src/eval/: lua.rs
