[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.0"

[dependencies.clap]
version = "4.0.32"
features = ["derive"]

[dependencies.terminal]
version = "0.2"
features = ["crossterm-backend"]
